--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,11 @@
 <title>Business Model Canvas</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="description" content="">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
+<link rel="apple-touch-icon" sizes="152x152" href="/img/icons/touch-icon-ipad-retina.png">
+<link rel="apple-touch-icon" href="/img/icons/touch-icon-iphone.png">
 <!-- build:css /css/vendor.css -->
 <!-- bower:css -->
 <link rel="stylesheet" href="components/normalize.css/normalize.css" />
@@ -42,6 +44,9 @@
 			<li><a href="/create">Create New</a></li>
 			<li><a href="/settings">Settings</a></li>
 			<!-- <li><a href="/canvas">Canvas-Test</a></li> -->
+		</ul><br><br>
+		<ul>
+			<li><a href="/about">About</a></li>
 		</ul>
 	</div>
 
